[gd_scene load_steps=24 format=3 uid="uid://c7ndiccsumhpc"]

[ext_resource type="Script" path="res://script/enemyfish.gd" id="1_gjln5"]
[ext_resource type="Texture2D" uid="uid://dl2g3h106dvvh" path="res://arts/Fish Sprite Sheet.png" id="2_udqnm"]
[ext_resource type="PackedScene" uid="uid://bcij4y6ry8na4" path="res://healthbar/healthbar.tscn" id="3_6mjtm"]
[ext_resource type="Texture2D" uid="uid://b2cfgkmk7due5" path="res://arts/Fish Sprite.png" id="3_l1bkx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5ym4q"]
atlas = ExtResource("2_udqnm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cg46b"]
atlas = ExtResource("3_l1bkx")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kxcs"]
atlas = ExtResource("3_l1bkx")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5qh1"]
atlas = ExtResource("3_l1bkx")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulf5e"]
atlas = ExtResource("2_udqnm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhrpx"]
atlas = ExtResource("3_l1bkx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6p5y"]
atlas = ExtResource("3_l1bkx")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b7na"]
atlas = ExtResource("2_udqnm")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxmp2"]
atlas = ExtResource("2_udqnm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gejqu"]
atlas = ExtResource("2_udqnm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo3lh"]
atlas = ExtResource("2_udqnm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjbst"]
atlas = ExtResource("2_udqnm")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nk6qj"]
atlas = ExtResource("2_udqnm")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp2x4"]
atlas = ExtResource("2_udqnm")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_fgept"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ym4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg46b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kxcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5qh1")
}],
"loop": true,
"name": &"death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulf5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhrpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6p5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b7na")
}],
"loop": true,
"name": &"hit",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxmp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gejqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo3lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjbst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nk6qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp2x4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_eyhpu"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ne41f"]
radius = 8.06226

[sub_resource type="CircleShape2D" id="CircleShape2D_40npp"]
radius = 75.0267

[sub_resource type="CircleShape2D" id="CircleShape2D_busrp"]
radius = 11.0

[node name="enemytest" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_gjln5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fgept")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_eyhpu")

[node name="hitbox" type="Area2D" parent="." groups=["enemy"]]
position = Vector2(-1, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_ne41f")

[node name="detection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_40npp")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.251

[node name="Healthbar" parent="." instance=ExtResource("3_6mjtm")]
offset_left = -7.0
offset_top = 10.0
offset_right = 8.0
offset_bottom = 12.0

[node name="hitarea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitarea" groups=["enemy"]]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_busrp")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
